--- a/TWIPEE_SNS/app/src/main/res/values/strings.xml
+++ b/TWIPEE_SNS/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">TWIPEE_SNS</string>
     <string name="comment_activity">댓글</string>
     <string name="search_activity">검색</string>
+    <string name="likeuser_activity">이 게시글을 좋아한 사람</string>
 </resources>
