--- a/TWIPEE_SNS/app/src/main/res/values/strings.xml
+++ b/TWIPEE_SNS/app/src/main/res/values/strings.xml
@@ -3,5 +3,5 @@
     <string name="comment_activity">댓글</string>
     <string name="search_activity">검색</string>
     <string name="likeuser_activity">이 게시글을 좋아한 사람</string>
-    <string name="sns_post_detail__activity">이 게시글을 좋아한 사람</string>
+    <string name="sns_post_detail__activity">게시글 상세보기</string>
 </resources>
